--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   reverse-proxy:
-    image: traefik #The official Traefik docker image
+    image: traefik:1.7-alpine #The official Traefik docker image
     #command: --api --docker #Enables the web UI and tells Træfik to listen to docker
     ports:
       - "80:80"     #The HTTP port
